# Xper

./: README.md  meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: MyWindow.vala  main.vala  main.vala~  meson.build  window.ui  window.vala
